chore: fix sonar issues (#3771)
* exclude httpclient 3

Signed-off-by: Pavel Jareš <Pavel.Jares@broadcom.com>

* fix

Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>

* upgrade spring-boot-actuator

Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>

* update express

Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>

* update dependencies

Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>

* fix bean issue

Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>

* fix apache compress dependency (detected by ./gradlew buildEnvironment)

Signed-off-by: Pavel Jareš <Pavel.Jares@broadcom.com>

* remove obsolete test

Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>

* update snapshots

Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>

* https://sonarcloud.io/project/issues?severities=BLOCKER%2CCRITICAL%2CMAJOR%2CMINOR&sinceLeakPeriod=true&issueStatuses=OPEN%2CCONFIRMED&types=BUG&branch=v3.x.x&id=zowe_api-layer&open=AZHGil4o3VXWrGgTbCrq&tab=code

Signed-off-by: Richard Salac <richard.salac@broadcom.com>

* https://sonarcloud.io/project/issues?impactSeverities=HIGH&issueStatuses=OPEN%2CCONFIRMED&branch=v3.x.x&id=zowe_api-layer&open=AZHsBjomCy50THmnpXJw

Signed-off-by: Richard Salac <richard.salac@broadcom.com>

* https://sonarcloud.io/project/issues?impactSeverities=HIGH&issueStatuses=OPEN%2CCONFIRMED&branch=v3.x.x&id=zowe_api-layer&open=AZG8RLICaDaTTh7MLIuh

Signed-off-by: Richard Salac <richard.salac@broadcom.com>

* https://sonarcloud.io/project/issues?impactSeverities=HIGH&issueStatuses=OPEN%2CCONFIRMED&branch=v3.x.x&id=zowe_api-layer&open=AZG8RK6DaDaTTh7MLItY

Signed-off-by: Richard Salac <richard.salac@broadcom.com>

* https://sonarcloud.io/project/issues?impactSeverities=HIGH&issueStatuses=OPEN%2CCONFIRMED&branch=v3.x.x&id=zowe_api-layer&open=AZG8RK-saDaTTh7MLIty&tab=code

Signed-off-by: Richard Salac <richard.salac@broadcom.com>

* https://sonarcloud.io/p